# DarkFactory

./: .gitattributes  .gitignore  CLAUDE.md  README.md  _fix_imports.py  cleanup.py  conftest.py  justfile  make-executable.py  mise.toml  pyproject.toml  vision.md
.darkfactory/: config.toml
.interface-design/: system.md
dev-prds/: PRD-200-workflow-execution-layer.md  PRD-201-workflow-dataclasses.md  PRD-202-builtins-registry-stubs.md  PRD-203-workflow-loader.md  PRD-204-assignment-logic.md  PRD-205-default-workflow.md  PRD-206-list-workflows-assign-cli.md  PRD-207-prompt-templates.md  PRD-208-agent-invoke.md  PRD-209-real-builtins.md  PRD-210-runner.md  PRD-211-plan-run-cli.md  PRD-212-containment-aware-impacts.md  PRD-500-darkfactory-migration.md  PRD-501-darkfactory-scaffold.md  PRD-502-darkfactory-port-source.md  PRD-503-darkfactory-port-tests-workflows.md  PRD-504-darkfactory-cli-defaults.md  PRD-505-darkfactory-verify-and-push.md  PRD-510-prd-new-subcommand.md  PRD-520-pumice-harness-cleanup.md
docs/: agent-verification-model.md
prds/: Dashboard.base  PRD-200-workflow-execution-layer.md  PRD-201-workflow-dataclasses.md  PRD-202-builtins-registry-stubs.md  PRD-203-workflow-loader.md  PRD-204-assignment-logic.md  PRD-205-default-workflow.md  PRD-206-list-workflows-assign-cli.md  PRD-207-prompt-templates.md  PRD-208-agent-invoke.md  PRD-209-real-builtins.md  PRD-210-runner.md  PRD-211-plan-run-cli.md  PRD-212-containment-aware-impacts.md  PRD-213-set-status-wrong-repo.md  PRD-214-frontmatter-roundtrip-drift.md  PRD-215-prd-concurrency-guard.md  PRD-216-list-field-canonicalization.md  PRD-217-process-lock-active-worktrees.md  PRD-218-stream-agent-output.md  PRD-220-graph-execution.md  PRD-221-workflow-owns-format-and-typecheck.md  PRD-222-general-purpose-tool.md  PRD-222.1-config-directory-discovery.md  PRD-222.2-prd-init-subcommand.md  PRD-222.3-bundle-builtin-workflows.md  PRD-222.4-user-config-directory.md  PRD-222.5-cascade-resolver-workflows.md  PRD-222.6-cascade-resolver-config.md  PRD-223-system-operations.md  PRD-223.2-system-cli.md  PRD-223.3-bulk-mutation-builtins.md  PRD-223.5-audit-impacts-operation.md  PRD-224-harness-invariants-honest-state.md  PRD-224.1-validate-review-branches.md  PRD-224.2-ensure-worktree-stale-guard.md  PRD-224.3-summarize-agent-run.md  PRD-224.4-cleanup-subcommand.md  PRD-224.5-gh-action-merge-status.md  PRD-224.6-commit-transcript.md  (+58 more)
scripts/: install-hooks.sh  test.sh
site/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
tests/: conftest.py  test_assign.py  test_audit_impacts.py  test_builtins.py  test_checks.py  test_ci_broken.py  test_cli_cleanup.py  test_cli_discuss.py  test_cli_new.py  test_cli_normalize.py  test_cli_project.py  test_cli_reconcile.py  test_cli_rework.py  test_cli_run.py  test_cli_system.py  test_cli_workflows.py  test_commands_discuss.py  test_config.py  test_containment.py  test_discovery.py  (+30 more)
(+968 files in other folders)
