[project]
name = "darkfactory"
version = "0.1.0"
description = "Standalone PRD harness: DAG orchestration, declarative workflows, agent invocation, stacked PRs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "filelock>=3.13",
    "rich>=13.0",
]

[project.scripts]
prd = "darkfactory.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.15.9",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/darkfactory"]
exclude = ["**/*_test.py", "**/conftest.py"]

[tool.mypy]
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["src", "tests", "workflows"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--import-mode=importlib"
